<resources>
    <string name="app_name">Home Services User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="welcomeBack">Welcome Back</string>
    <string name="enterDetailsBelow">Enter your details below</string>
    <string name="enter_name">Enter name</string>
    <string name="enterUserNameEmail">Enter email</string>
    <string name="enterFullName">Enter your full name</string>
    <string name="enterPassword">Enter password</string>
    <string name="forgetPassword">forget password?</string>
    <string name="signIn">Sign In</string>
    <string name="donNotHaveAnAccount">Don\'t have a account?</string>
    <string name="signup">Sign Up</string>
    <string name="howItWork">How it works?</string>
    <string name="watchVideo">Watch video</string>
    <string name="getStarted">Get Started!</string>
    <string name="enterPhone">Enter phone</string>
    <string name="enterCNIC">Enter CNIC</string>
    <string name="enterConfirmPassword">Confirm password</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="confirmItYou">Confirm it\'s you!</string>
    <string name="enter4DigitCodeSentNumber">Enter 4-digit code sent to your phone number</string>
    <string name="verify">Verify</string>
    <string name="didNotReceivedCode">Didn\'t received code?</string>
    <string name="resendVerificationCode">Resend the verification code</string>
    <string name="welcomeAdmin">Welcome Admin</string>
    <string name="adminId">Admin ID</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hey">Hey! Natasha</string>
    <string name="goodMorning">Good morning! Have a good day.</string>
    <string name="searchMaid">Search maid</string>
    <string name="maidName">Sophia</string>
    <string name="maidAge">Age: 25</string>
    <string name="perMonth">per month</string>
    <string name="maidSalaryDemand">RS 55000</string>
    <string name="nav_header_text">Menu</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="how_it_works">How it works</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="working">Working</string>
    <string name="currentMaid">Current maid</string>
    <string name="currentMaidName">Sophia is your current maid.</string>
    <string name="maidDetails">Below are the details.</string>
    <string name="rating">Rating</string>
    <string name="location">Location</string>
    <string name="availability">Availability</string>
    <string name="placeName">Sargodha</string>
    <string name="halfTime">Half-time</string>
    <string name="service">Services</string>
    <string name="servicesName">Washing, Cleaning, Toilets</string>
    <string name="experience">Experience</string>
    <string name="experienceYears">5 Years</string>
    <string name="cancelEmployment">Cancel Employment</string>
    <string name="pastMaid">Past Maids</string>
    <string name="createAnAccount">Create an account:</string>
    <string name="createAnAccountText">To get started, you need to create an account on our platform. This involves providing your basic information and details about your cleaning requirements.</string>
    <string name="searchForMaids">Search for maids:</string>
    <string name="searchForMaidsText">Once you have created an account, you can start searching for maids who meet your specific needs. You can browse through profiles, read reviews, and check availability to find the right match.</string>
    <string name="enjoyYourCleanHome">Enjoy your clean home:</string>
    <string name="enjoyYourCleanHomeText">On the day of your appointment, your maid will arrive at your home ready to clean. You can relax and enjoy your clean home, knowing that your maid has been vetted and is trustworthy.</string>
    <string name="payment">Payment:</string>
    <string name="paymentText">Payment for the services is usually made through the app, either upfront or after the service. You can manage your payments and review past appointments through your account dashboard.</string>
    <string name="maidAppointed">Maid appointed</string>
    <string name="date">April 26</string>
    <string name="aboutUs">About us</string>
    <string name="whatWeDoIt">What we do?</string>
    <string name="whatWeDoText1">Welcome to our website, where we strive to make the process of hiring maids as simple and stress-free as possible. Our mission is to connect households with reliable and trustworthy domestic help, allowing busy homeowners to focus on the things that matter most to them.</string>
    <string name="whatWeDoText2">We understand that finding the right maid can be a daunting task, which is why we have developed an easy-to-use platform that streamlines the process. With just a few clicks, our users can search for maids based on their specific needs and preferences, book appointments, and communicate with their maid through our secure messaging system.</string>
    <string name="whatWeDoText3">We are committed to providing our users with the highest quality service possible, which is why we thoroughly vet all of the maids on our platform. Our team conducts extensive background checks, reference checks, and interviews to ensure that every maid we work with is trustworthy, reliable, and skilled.</string>
    <string name="whatWeDoText4">We also believe in transparency and accountability, which is why we provide our users with the tools they need to easily manage their maid appointments and payments. Our users can access their account information, review past appointments, and leave feedback for their maid all in one convenient location.</string>
    <string name="goal">Our goal</string>
    <string name="goalText">Our goal on our website is to become the go-to platform for households seeking reliable and trustworthy maids. We aim to continually improve our platform to make it more user-friendly and efficient, allowing our users to easily book appointments, communicate with their maids, and manage their accounts.</string>
    <string name="priceRange">Price range</string>
    <string name="enterPrice">Enter your budget </string>
    <string name="ares">Area</string>
    <string name="enterArea">Enter area/address </string>
    <string name="fullTime">Full time</string>
    <string name="cleaning">Cleaning</string>
    <string name="clothes">Clothes</string>
    <string name="toilets">Toilets</string>
    <string name="clothesPressing">Clothes Pressing</string>
    <string name="babyCare">Baby care</string>
    <string name="applyFilters">Apply Filters</string>
    <string name="hireMe">Hire me</string>

    <string name="phone_num_not_valid">Phone number must be of 11 digits excluding 0</string>
    <string name="password_not_match">Passwords do not match</string>
</resources>