<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_screen"
    tools:context=".ui.fragments.home.WorkingFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/heyNameUserTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppinsmedium"
            android:maxWidth="270dp"
            android:maxHeight="50dp"
            android:text="@string/hey"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goodMorningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/goodMorning"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/heyNameUserTextView"
            app:layout_constraintTop_toBottomOf="@id/heyNameUserTextView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/maidCircleImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="250dp"
            app:layout_constraintBottom_toBottomOf="@id/goodMorningTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/heyNameUserTextView">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image1" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maidCircleImageView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/youtubeUrlLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_edittext_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goodMorningTextView">

            <TextView
                android:id="@+id/howItWorkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsmedium"
                android:maxWidth="270dp"
                android:maxHeight="50dp"
                android:text="@string/howItWork"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/image1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/howItWorkTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/createAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppinsmedium"
            android:maxWidth="270dp"
            android:maxHeight="50dp"
            android:text="@string/createAnAccount"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtubeUrlLayout" />

        <TextView
            android:id="@+id/createAccountTextTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/createAnAccountText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccountTextView" />

        <TextView
            android:id="@+id/searchForMaidTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/searchForMaids"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccountTextTextView" />

        <TextView
            android:id="@+id/searchForMaidTextTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/searchForMaidsText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchForMaidTextView" />

        <TextView
            android:id="@+id/enjoyYourCleanHomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/enjoyYourCleanHome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchForMaidTextTextView" />

        <TextView
            android:id="@+id/enjoyYourCleanHomeTextTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/enjoyYourCleanHomeText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enjoyYourCleanHomeTextView" />

        <TextView
            android:id="@+id/paymentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/payment"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enjoyYourCleanHomeTextTextView" />

        <TextView
            android:id="@+id/paymentTextTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/paymentText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paymentTextView"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>